<resources>
    <string name="app_name">Dinosaurs</string>
    <string name="main_descriptionEnglish"> Habitat time:\nHeight:\nLength:\nWeight:\nFirst found in\nMeaning of the name:</string>
    <string name="main_descriptionSwim"> Habitat time:\nLength:\nFirst found in\nMeaning of the name:</string>
    <string name="main_descriptionFly"> Habitat time:\nWingspan:\nFirst found in\nMeaning of the name:</string>
    <string name="title_panel">Dinosaur world</string>
    <string name="tabs_plant">Plants of antiquity</string>
    <string name="tabs_earth">Prehistoric Earth</string>
    <string name="tabs_records">Dinosaur records</string>
    <string name="tabs_finds">Ghost Ranch</string>
    <string name="tabs_skelets">Dinosaur skeletons</string>
    <string name="ranch">In the course of more than a century of fossil collecting, Museum paleontologists have
        unearthed fossils from every corner of the globe. But there are some sites so fruitful in fossils that they are visited again
        and again by the Museum’s fossil hunters, with each generation turning up new and unexpected finds.\n
        \n
        One of those sites is New Mexico’s Ghost Ranch, home to four quarries that paleontologists from the Museum have excavated for decades.
        The remains of animals from the Triassic era, including dinosaurs, reptiles, and fishes, have all been discovered here,
        often preserved in exquisite condition.  “These animals lived in a very different environment,” says Sterling Nesbitt,
        a research associate at the Museum who has spent 10 field seasons at the site. “About 212 to 200 million years ago it was marshy.</string>
    <string name="contin">Paleontology began in earnest at Ghost Ranch in 1928, when the fossilized remains of crocodile-like reptiles including phytosaurs and aetosaurs were discovered by researchers from the University of California. The Museum’s work at Ghost Ranch began two decades later, in 1947, when curator Edwin H. Colbert and his team came upon a veritable graveyard of Coelophysis bauri in what is now called Whitaker Quarry. These early dinosaurs were small, fast, bipedal predators that likely chased down prey while looking much like a tiny T. rex.\n The specimens Colbert found were remarkably well-preserved, complete, and in many cases articulated. The fossil discovery was also one of the most notable in the history of the state, and led to Coelophysis bauri being named the official state fossil of New Mexico in 1981.\n</string>
    <string name="search_dinosaur">search dinosaur</string>
    <string name="search">Search</string>
    <string name="ab">First about</string>
    <string name="stringForLoading">Wait a few seconds\n For this action you need internet</string>
    <string name="plant_araucaria">These trees reached a height of 100 meters. Their diameter was three meters. The cones were spherical formations, their diameter was 3-4 cm. \n The closest relative of these giants is Bunia-bunia in the southeast of Australia, in the state of Queensland. \n The name Araucaria mirabilis comes from the toponym "Aroko" and the Latin word mirabilis, which means "amazing".</string>
    <string name="plant_cooksonia">At the moment, this plant is considered the oldest representative of the flora on the planet. Cuxonia grew on Earth over 400,000,000 years ago. \n This plant did not exceed a few centimeters in height and was the first living organism with a stem (albeit quite primitive when compared to modern plants). \n Cuchsonia reproduced by spores that were located in ball-like processes at the end of the stems. Ferns now breed in a similar way. However, these plants had no leaves or roots. \n Scientists still do not know how they were attached to the ground. Some botanists believe that the roots are simply not preserved. Others are sure: the rootless system means that the cuxonia lived on water or even under water. Cuxonia lived freely in the late Silurian geological period. The oldest fossils are found in Ireland. Their age is 425 million years. \n This plant grew on coasts from 45 degrees north latitude to 30 degrees south latitude. Evolution did not stand still, and by the early Devonian period, other plant species appeared in the arena. Either way, the dominance over millions of years has allowed the Cuxonia to set the stage for new species and creatures.</string>
    <string name="plant_lepidodendron">Lepidodendrons were the most common plant species during the Carboniferous geological period. At this time, there was a record amount of oxygen in the Earths atmosphere. Because of this, the representatives of the flora grew quickly and died just as quickly. Temperatures were much higher at that time, especially in the Northern Hemisphere. \n Lepidodendrons covered almost all the land, so now most of the coal is their fossilized remains. The Carboniferous period ended 300 million years ago, but fossils of lepidodendrons have been found in China. Their age is 205 million years. \n The closest relatives of these plants are modern mosses. The only difference is in size: lepidodendrons reached a height of 40 meters, and the diameter of the trunks exceeded 2 meters. The flesh was covered with a thick layer of bark. \n These plants grew in small groups and their life was amazingly short: 10-15 years. The diamond-shaped scales remained in the place of the fallen leaves and from them one could find out the age of the plant. The lepidodendrons had no branches: only the trunk and foliage. Like all primitive trees, lepidodendrons multiplied by spores at the end of their life cycle. \n In the Mesozoic period, this species completely disappeared, giving way to more perfect representatives of the flora.</string>
    <string name="plant_araucarioxylon_arizonicum">This tree has a lot in common with Araucaria mirabilis, although they are separated by several tens of millions of years. As the name suggests, Araucarioxylon arizonicum covered abundantly the land now located in the state of Arizona. However, 207 million years ago, all this lush forest was suddenly covered with a layer of lava and volcanic ash, turning the forest into fossils. \n Huge trunks can now be seen in the Stone Forest National Park. The trees reached a height of 70 meters. The closest relatives of this giant are Araucaria Chilean and Araucaria varifolia. The Navajo Indians believe that the stone trunks are the bones of the Great Giant, who was killed by their ancestors in time immemorial. In the Paiute tribe, they think differently: these are the arrows of the god of thunder. It wasnt until 1888 that Smithsonian curator F.H. Nollton identified the origin of these fossils. As soon as information became public, people rushed to collect stone wood to make furniture, tiles and decorations from it. \n In 1902 the park became a protected area, and in 1922 it was given the status of a reserve. This has helped to reduce the theft of fossils, but approximately 13 tons of petrified araucarioxylon arizonicum wood is taken by tourists every year.</string>
    <string name="plant_glossopteris">In 1912, German geophysicist, meteorologist and polar explorer Alfred Lothar Wegener argued that continents drift across the surface of our planet. Thanks to modern research and satellite imagery, we know this happens all the time. However, until the middle of the twentieth century, this theory was perceived ambiguously. However, it was Wegener who saw the similarity of the outlines of Africa and South America, which look like two puzzles. To prove his theory, the scientist analyzed data on fossils on both sides of the Atlantic. A great many matches were found. \n And the main one was the glassopteris. Thanks to the widespread distribution of this plant in the Southern Hemisphere, Wegener was able to prove that Africa, Antarctica, South America and Australia once shared borders and belonged to the mainland known as Gondwana. \n Glassopteris was the dominant plant species during the Permian period 300,000,000 years ago ... This extinct plant was a relative of the modern fern and reached 30 meters in height. \n There were several species in the glassopteris family, but very little is known about their differences. This uncertainty is due to the fact that it remains a mystery whether the fossilized remains are parts of the same species at different stages of development, or belong to different species. It is known for certain that the glassopteris were deciduous plants and regularly shed their foliage. They grew almost everywhere, but there is no complete record of what the tree looked like. \n According to recent reports, the glassopteris were large shrubs, similar to modern magnolia or ginkgo.</string>
    <string name="plant_prototaxites">These mysterious fossilized organisms were discovered in 1859 in Canada. From the very first day, they baffled the scientific community. Since then, fossilized prototaxites have been found all over the world. Their height is about 8 meters. \n The first representatives of the species date back 420 million years, and the youngest ones disappeared from the fossils about 70 million years later. Most scientists believed it was some form of lichen or algae, but there was no evidence for this version. It wasnt until 2001 that Professor Francis Huber of the National Museum of Natural History in Washington found a solution: prototaxites were mushrooms. He made this conclusion based on a comparison of the tissues of modern mushrooms with fossils. There was no clear evidence, but that all changed when another paleontologist, Kevin Boyes of the University of Chicago, did not conduct a carbon analysis. The ratio and structural features of carbon molecules in the fossils made it possible to prove that prototaxites were not plants, which means that they were giant mushrooms that reigned on planet Earth at that time.</string>
    <string name="plant_wollemia">Wollemia is one of the oldest plants on Earth, it was distributed in the Jurassic period and was considered extinct millions of years ago, until park employee David Noble accidentally found about a hundred trees. This species was named in honor of him (the word nobilis also means "noble"). \n An evergreen tree 25-40 m high. Branches of the first order almost never form lateral shoots. Shoots of the first order end with a male or female cone. After the seeds ripen, the branch dies off. The same thing happens with branches that have not formed cones. New branches are formed from dormant buds on the main trunk. \n The bark is brown spongy, corky. Leaves are flat, 3-8 cm long, up to 0.5 cm wide. Arranged spirally, but shifted so that they form two or four rows. The color ranges from greenish lemon in young trees to olive yellow in adults. Mature leaves are dense, waxy.</string>
    <string name="record_1_desc">The early ancestors of the dinosaurs lived in the part of Gondwana that later became South and East Africa. They were small, graceful animals, light build and long legs. The earliest known dinosauromorph is Asilisaurus kongwe, whose remains are found in Tanzania. Azilizaurus lived 245 million years ago, reached 3 m in length and ran quickly on four limbs. Plants, insects and small vertebrates were his food.</string>
    <string name="btn_land">Наземные</string>
    <string name="btn_swim">Водные</string>
    <string name="btn_fly">Воздух</string>
    <string name="btn_english_land">English</string>
    <string name="btn_rus_land">Русский</string>
    <string name="btn_english_fly">English</string>
    <string name="btn_rus_fly">Русский</string>
    <string name="btn_english_swim">English</string>
    <string name="btn_rus_swim">Русский</string>
</resources>