<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/art" />

        <Button
            android:id="@+id/fab_language"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_margin="@dimen/fab_margin"
            android:layout_marginBottom="16dp"
            android:focusable="true"
            android:text="@string/btn_land" />

        <Button
            android:id="@+id/fab_marine"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/blueBlack"
            android:focusable="true"
            android:text="@string/btn_swim" />

        <Button
            android:id="@+id/fab_fly"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_margin="@dimen/fab_margin"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/redDark"
            android:focusable="true"
            android:text="@string/btn_fly" />

        <Button
            android:id="@+id/fab_england"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="70dp"
            android:backgroundTint="@color/redDark"
            android:focusable="true"
            android:text="@string/btn_english_land"
            android:visibility="invisible" />

        <Button
            android:id="@+id/fab_russia"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="115dp"
            android:backgroundTint="@color/blueBlack"
            android:focusable="true"
            android:text="@string/btn_rus_land"
            android:visibility="invisible" />

        <Button
            android:id="@+id/fab_england_fly"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="70dp"
            android:backgroundTint="@color/redDark"
            android:focusable="true"
            android:text="@string/btn_english_fly"
            android:visibility="invisible" />

        <Button
            android:id="@+id/fab_russia_fly"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="115dp"
            android:backgroundTint="@color/blueBlack"
            android:focusable="true"
            android:text="@string/btn_rus_fly"
            android:visibility="invisible" />

        <Button
            android:id="@+id/fab_england_swim"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="70dp"
            android:backgroundTint="@color/redDark"
            android:focusable="true"
            android:text="@string/btn_english_swim"
            android:visibility="invisible" />

        <Button
            android:id="@+id/fab_russia_swim"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="115dp"
            android:backgroundTint="@color/blueBlack"
            android:focusable="true"
            android:text="@string/btn_rus_swim"
            android:visibility="invisible" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>